# mcp_resource_server

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.devcontainer.yml  docker-compose.yml  pyproject.toml
.claude/commands/: build.md
.devcontainer/: devcontainer.json
docs/: CLAUDE_DESKTOP_SETUP.md  QUICK_START.md
src/mcp_resource_server/: __init__.py  resources.py  server.py
tests/: __init__.py  conftest.py  test_blob_operations.py  test_resources.py
