[project]
name = "mcp-resource-server"
version = "0.1.0"
description = "MCP Resource Server for file and image operations with blob storage"
dependencies = [
    "fastmcp",
    "requests",
    "python-dotenv",
    "Pillow>=10.0.0",
    "mcp-mapped-resource-lib",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.0",
    "responses>=0.25",
]

[project.scripts]
mcp-resource-server = "mcp_resource_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_resource_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "responses>=0.25.8",
]
